--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "sass": "^1.56.1",
         "tailwindcss": "^3.1.0",
         "vite": "^5.4.8"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.11.3"
     }
 }
