--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME="Desafio DG UDV"
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:We8txwXBsVQubSQPuDSSFWGPAwK9lmE2xww5DCOuzMo=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
